--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -235,7 +235,7 @@
   <div class="language-switcher">
     <button class="lang-btn" id="langBtn" onclick="toggleLanguage()" title="Switch Language">
       <i class="fas fa-language"></i>
-      <span id="langText">中文</span>
+      <span id="langText">English</span>
     </button>
   </div>
 
