--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <meta name="citation_pdf_url" content="https://YOUR_DOMAIN.com/static/pdfs/paper.pdf">
   
   <!-- Additional SEO -->
-  <meta name="theme-color" content="#2563eb">
-  <meta name="msapplication-TileColor" content="#2563eb">
+  <meta name="theme-color" content="#8899D9">
+  <meta name="msapplication-TileColor" content="#8899D9">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   
@@ -589,7 +589,7 @@
             </div>
           </div>
 
-          <div class="box" style="margin-top: 2rem; background-color: #f5f5f5;">
+          <div class="box" style="margin-top: 2rem; background-color: var(--background-accent);">
             <h4 class="title is-5" data-en="Data Sources" data-zh="数据来源">数据来源</h4>
             <p data-en="All charts are programmatically rendered within a unified pipeline. The &quot;Real&quot; and &quot;Synthetic&quot; labels refer only to the provenance of the underlying numeric data, not visual rendering. Real charts are generated from real-world numeric tables, whereas synthetic charts rely on randomly sampled distributions with controlled statistical patterns. This design ensures consistent visual rendering while preserving semantic variability across data sources." data-zh="所有图表都在统一的管道中程序化渲染。&quot;真实&quot;和&quot;合成&quot;标签仅指底层数值数据的来源，而非视觉渲染。真实图表从真实世界的数值表格生成，而合成图表依赖于具有受控统计模式的随机采样分布。这种设计确保了视觉渲染的一致性，同时保留了跨数据源的语义可变性。">
               所有图表都在统一的管道中程序化渲染。"真实"和"合成"标签仅指底层数值数据的来源，
@@ -774,7 +774,7 @@
             </div>
           </div>
 
-          <div class="box" style="margin-top: 2rem; background-color: #e8f4f8;">
+          <div class="box" style="margin-top: 2rem; background: linear-gradient(135deg, var(--background-accent) 0%, var(--background-secondary) 100%);">
             <h3 class="title is-4" data-en="Model Selection" data-zh="模型选择">模型选择</h3>
             <div class="columns">
               <div class="column is-half">
@@ -1103,7 +1103,7 @@
             Ablation study of major elicitation components. We report RNE and RE (lower is better) on one representative chart type from each coordinate family. All variants are evaluated using Gemini-2.0-Flash.
           </p>
 
-          <div class="box" style="margin-top: 2rem; background-color: #e8f4f8;">
+          <div class="box" style="margin-top: 2rem; background: linear-gradient(135deg, var(--background-accent) 0%, var(--background-secondary) 100%);">
             <h4 class="title is-5" data-en="Component Contributions" data-zh="组件贡献">Component Contributions</h4>
             <ul>
               <li data-en="<strong>Progressive zoom-in refinement</strong> is the dominant contributor to numerical accuracy. Disabling it results in the most pronounced performance drop across all chart types." data-zh="<strong>渐进式放大细化</strong>是数值准确性的主要贡献者。禁用它会导致所有图表类型上最显著的性能下降。"><strong>渐进式放大细化</strong>是数值准确性的主要贡献者。禁用它会导致所有图表类型上最显著的性能下降。</li>
